--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/singIn.css">
     <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="icon" href="assets/images/logo-hbo.svg">
+    <link rel="icon" href="assets/images/hbo.png">
 </head>
 
 <body>
